<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exchange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.bme.aut.mobsoftlab.ui.currencyexchange.CurrencyExchangeActivity">


    <TextView android:id="@+id/exchangeSourceText"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/source"/>
    <ListView android:id="@+id/exchangeSourceList"
        android:layout_width="match_parent" android:layout_height="120dp"
        android:layout_below="@id/exchangeSourceText"
        />

    <Button android:id="@+id/exchangeswapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exchangeSourceList"
        android:text="@string/swap"
        />

    <TextView android:id="@+id/exchangeTargetText"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@id/exchangeswapButton"
        android:text="@string/target"/>
    <ListView android:id="@+id/exchangeTargetList"
        android:layout_width="match_parent" android:layout_height="120dp"
        android:layout_below="@id/exchangeTargetText"
        />

    <TextView android:id="@+id/exchangeSourceValueText"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@id/exchangeTargetList"
        android:text="@string/source_value"/>
    <EditText android:id="@+id/exchangeSourceAmountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exchangeSourceValueText"/>


    <TextView android:id="@+id/exchangeTargetValueText"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@id/exchangeSourceAmountText"
        android:text="@string/target_value"/>
    <TextView android:id="@+id/exchangeTargetAmountText"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@id/exchangeTargetValueText"
        android:gravity="center"/>

</RelativeLayout>
