<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_histogram"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.bme.aut.mobsoftlab.ui.histogram.HistogramActivity">

    <Button android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_favorite"/>
    <GridLayout android:id="@+id/histogramCurrencyGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteButton"
        android:rowCount="2"
        android:columnCount="2">

        <TextView android:id="@+id/histogramSourceText"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="120dp" android:layout_height="match_parent" android:text="@string/source"/>
        <TextView android:id="@+id/histogramFromText"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_width="wrap_content" android:layout_height="match_parent"/>


        <TextView android:id="@+id/histogramTargetText"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="120dp" android:layout_height="match_parent"
            android:text="@string/target"/>
        <TextView android:id="@+id/histogramToText"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_width="wrap_content" android:layout_height="match_parent"/>
    </GridLayout>
    <ListView android:id="@+id/histogramDataList"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/histogramCurrencyGrid">

    </ListView>
</RelativeLayout>
